--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">RuinsAndroidLibrary</string>
     <string name="NavigationView">NavigationView 的使用</string>
     <string name="title_activity_navigation_view">NavigationViewActivity</string>
+    <string name="open_Gallery">打开相册</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
